--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -3,8 +3,7 @@
     color: #fff;
     height: 50px;
     width: 100%;
-    display: flex;
-    justify-content: space-between;
+    display: grid;
 }
 
 a {
@@ -13,10 +12,12 @@ a {
 
 /*ナビゲーションバー*/
 .header-nav {
-    display: flex;
+    display: grid;
     justify-content: space-between;
     width: 100%;
     align-content: center;
+    grid-template-columns: auto 1fr;
+    column-gap: 20px;
 }
 .header-nav__ttl {
     margin: 0;
@@ -28,12 +29,17 @@ a {
 }
 
 .header-nav__list {
-    display: flex;
+    display: grid;
     margin-right: 10px;
+    grid-auto-flow: column;
+    column-gap: 8px;
+    justify-self: end;
+    align-items: center;
 }
 .header-nav__list-item {
     padding: 0 8px;
     border: red 1px solid;
+    justify-self: center;
 }
 .header-nav__list-item a,
 .header-nav__list-item a:visited {
