--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,3 +1,10 @@
+body {
+    background-color: #F0EFF2;
+}
+li {
+    list-style: none;
+}
+
 .main__content-wrapper {
     width: 100%;
     height: 90vh;
@@ -12,4 +19,30 @@
     transform: translate(-50%, -50%);
     z-index: 10;
     border: red 1px solid;
+}
+
+.status-label {
+    display: inline-block;
+    font-size: 0.7em;
+    background-color: #C8C8C8;
+    color: #696969;
+    padding: 2px 10px;
+    border-radius: 30px;
+    margin: 8px 0;
+}
+
+.main__content-datetime {
+    font-size: 2em;
+    font-weight: bold;
+    margin: 10px 0;
+}
+
+.attendance-form__button-submit {
+    background-color: #000;
+    color: #fff;
+    border-radius: 5px;
+    border: #000 1px solid;
+    padding: 2px 20px;
+    cursor: pointer;
+    margin-top: 10px;
 }
