--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -1,4 +1,5 @@
-.detail__title {
+.detail__title,
+.approve__title {
     border-left: 5px solid #333;
     padding-left: 8px;
     margin-bottom: 50px;
@@ -8,46 +9,62 @@ body {
     font-size: 0.9em;
 }
 
-.detail__content {
+.detail__content,
+.approve__content {
     margin: 65px auto;
     width: 60%;
 }
 
-.detail-table {
+.detail-table,
+.approve-table {
     width: 100%;
     background-color: #fff;
     border-radius: 5px;
 }
-.detail-table__heading {
+.detail-table__heading,
+.approve-table__heading {
     font-weight: normal;
     color: #737373;
 }
-.detail-table__row {
+.detail-table__row,
+.approve-table__row {
     height: 50px;
 }
-.detail-table__row:not(:last-child) {
+.detail-table__row:not(:last-child),
+.approve-table__row.detail-table__row:not(:last-child) {
     border-bottom: 2px solid #E1E1E1;
 }
-.detail-table__heading {
+.detail-table__heading,
+.approve-table__heading {
     text-align: left;
     padding-left: 2.5em;
     width: 13em;
 }
-.detail-table__data-left {
+.detail-table__data-left,
+.approve-table__data-left {
     width: 9em;
 }
-.detail-table__data {
+.detail-table__data,
+.approve-table__data {
     /*border: #333 1px solid;*/
 }
 
 
-.detail-table__input {
+.detail-table__input,
+.approve-table__input {
     width: 6em;
     height: 30px;
     border: #E1E1E1 solid 1px;
     border-radius: 5px;
 }
-.detail-table__textarea {
+.approve-table__input,
+.approve-table__textarea {
+    border: none;
+    outline: none;
+}
+
+.detail-table__textarea,
+.approve-table__textarea {
     width: 70%;
     height: 50px;
     margin: 10px 0;
