--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -33,12 +33,15 @@ body {
     margin: 10px 0;
 }
 
+.attendance-form__button {
+    margin-top: 30px;
+}
 .attendance-form__button-submit {
     background-color: #000;
     color: #fff;
-    border-radius: 5px;
+    border-radius: 6px;
     border: #000 1px solid;
-    padding: 2px 20px;
+    padding: 4px 25px;
     cursor: pointer;
-    margin-top: 10px;
+    vertical-align: middle;
 }
