--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -71,3 +71,16 @@ body {
     border: #E1E1E1 solid 1px;
     border-radius: 5px;
 }
+
+.detail-form__button {
+    margin-top: 30px;
+    text-align: right;
+}
+.detail-form__button-submit {
+    background-color: #000;
+    color: #fff;
+    padding: 3px 25px;
+    border: #000 1px solid;
+    border-radius: 3px;
+    cursor: pointer;
+}
