--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -88,11 +88,38 @@ body {
     cursor: pointer;
 }
 
-.error-message__area {
+/*メッセージの表示と閉じるボタン*/
+.item__alert {
+    position: relative;
+    margin: 20px 0 25px;
+}
+.alert-close {
+    display: none;
+}
+.alert-message {
     background-color: #e6c0c0;
-    color: #6c2735;
+    color: #721c24;
     padding: 5px 10px;
     display: inline-block;
     width: 60%;
-    margin: 0 auto 20px;
+    position: relative;
+    transition: opacity 0.3s ease;
+}
+.alert-close__button {
+    position: absolute;
+    top: 50%;
+    right: 12px;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+}
+.alert-close:checked + .alert-message {
+    opacity: 0;
+    height: 0;
+    padding: 0;
+    margin: 0;
+    border: none;
+    overflow: hidden;
 }
