--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -114,6 +114,17 @@ body {
     border: none;
     font-size: 18px;
     cursor: pointer;
+    padding: 2px;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.7;
+}
+.alert-close__button:hover {
+    background-color: #f1a8a8bc;
 }
 .alert-close:checked + .alert-message {
     opacity: 0;
