--- a/src/public/css/list.css
+++ b/src/public/css/list.css
@@ -65,3 +65,8 @@ body {
     font-weight: bold;
     padding: 3px 30px 3px 0px;
 }
+
+.table__data--none,
+.table__data--none:visited {
+    color: #999;
+}
