勤怠一覧の年月選択にdatepicker（monthSelect）適用

--- a/src/public/css/list.css
+++ b/src/public/css/list.css
@@ -34,7 +34,8 @@ body {
     color: #737373;
 }
 
-.date-selector {
+.date-selector,
+.month-selector {
     border: none;
     outline: none;
     color: #737373;
