--- a/src/public/css/list.css
+++ b/src/public/css/list.css
@@ -137,3 +137,16 @@ body {
     font-weight: bold;
     color: #000;
 }
+
+.export-button {
+    margin: 20px 0;
+    text-align: right;
+}
+.export-button--submit {
+    background-color: #000;
+    color: #fff;
+    border: 1px solid #000;
+    border-radius: 3px;
+    padding: 3px 20px;
+    cursor: pointer;
+}
