--- a/src/public/css/list.css
+++ b/src/public/css/list.css
@@ -41,6 +41,12 @@ body {
     cursor: pointer;
     font-size: 1.1em;
     text-align: center;
+    padding: 0;
+    margin: 0;
+    width: 100px;
+}
+.fa-solid {
+    margin-right: 0;
 }
 
 .attendance-table,
