staff用detail.blade.phpのクラス名修正とcss反映

--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -52,7 +52,7 @@ body {
     padding-left: 5px;
 }
 
-.detail-table__textarea,
+.detail-form__textarea,
 .detail-form__textarea--approve {
     width: 90%;
     height: 50px;
